# Synergos

./: Cargo.toml  DESIGN.md  LICENSE  OPERATIONAL-TEST.md  README.md  REVIEW_DESIGN.md  REVIEW_IMPLEMENTATION.md  REVIEW_MISSING_FEATURES.md  REVIEW_VULNERABILITY.md  SETUP.md
.github/workflows/: ci.yml
ars-plugin-synergos/: Cargo.toml
ars-plugin-synergos/src/: bridge.rs  events.rs  lib.rs
ars-plugin-synergos/src/conflict/: mod.rs
ars-plugin-synergos/src/exchange/: mod.rs
ars-plugin-synergos/src/presence/: mod.rs
docs/: README.md  getting-started.md  platforms.md  projects-and-peers.md
review/: latest.json
review/2026-05-13/: AUTOFIX.md  REVIEW.md  REVIEW_DESIGN.md  REVIEW_IMPLEMENTATION.md  REVIEW_MISSING_FEATURES.md  REVIEW_QUALITY.md  REVIEW_VULNERABILITY.md  latest.json
synergos-core/: Cargo.toml
synergos-core/src/: catalog_sync.rs  cli.rs  daemon.rs  event_bus.rs  ipc_server.rs  lib.rs  main.rs  peer_bootstrap.rs  peer_info_server.rs  project.rs
synergos-core/src/conflict/: mod.rs
synergos-core/src/exchange/: mod.rs
synergos-core/src/presence/: mod.rs
synergos-core/tests/: auto_pull_e2e.rs  auto_transfer_e2e.rs  catalog_sync.rs  catalog_sync_e2e.rs  core_services.rs  gossip_handlers.rs  gossip_mesh_e2e.rs  ipc_client_events.rs  ipc_handlers.rs  ipc_integration.rs  ipc_subscribe.rs  project_persistence.rs  transfer_e2e.rs  two_node_full_e2e.rs
synergos-gui/: Cargo.toml
synergos-gui/src/: app.rs  connection.rs  lib.rs  main.rs
synergos-gui/src/ui/: conflicts.rs  mod.rs  overview.rs  peers.rs  settings.rs  transfers.rs
synergos-gui/tests/: ui_snapshot.rs
synergos-ipc/: Cargo.toml
synergos-ipc/src/: client.rs  command.rs  event.rs  lib.rs  response.rs  transport.rs
synergos-net/: Cargo.toml
synergos-net/src/: config.rs  error.rs  identity.rs  lib.rs  promotion.rs  types.rs
synergos-net/src/catalog/: manager.rs  types.rs
synergos-net/src/chain/: file_chain.rs  ledger.rs  mod.rs
synergos-net/src/conduit/: mod.rs
synergos-net/src/content/: bitswap.rs  block.rs  chunker.rs  mod.rs  session.rs  store.rs
synergos-net/src/dht/: mod.rs  node.rs  routing.rs  rpc.rs  transport.rs
synergos-net/src/gossip/: message.rs  mod.rs  node.rs  transport.rs
synergos-net/src/mesh/: mod.rs  stun.rs
synergos-net/src/quic/: hello.rs  mod.rs  verifier.rs
synergos-net/src/relay/: mod.rs
synergos-net/src/transfer/: mod.rs
synergos-net/src/tunnel/: mod.rs
synergos-net/tests/: bitswap_e2e.rs  bitswap_v2.rs  dht_find_node.rs  dht_over_quic.rs  net_additional.rs  quic_control_stream.rs  quic_peer_auth.rs  relay_session.rs
synergos-relay/: Cargo.toml
synergos-relay/src/: config.rs  lib.rs  main.rs  server.rs
synergos-relay/tests/: relay_integration.rs
synergos-tauri/: README.md  package-lock.json  package.json
synergos-tauri/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
synergos-tauri/frontend/src/: App.tsx  global.css  main.tsx
synergos-tauri/frontend/src/components/: AddPeerModal.tsx  AddProjectModal.tsx  Modal.tsx  PublishModal.tsx
synergos-tauri/frontend/src/lib/: tauri.ts
synergos-tauri/frontend/src/pages/: Dashboard.tsx  Settings.tsx
synergos-tauri/src-tauri/: Cargo.toml  tauri.conf.json
synergos-tauri/src-tauri/capabilities/: default.json
synergos-tauri/src-tauri/src/: config.rs  ipc.rs  lib.rs  main.rs
