[package]
name = "ars-plugin-synergos"
version = "0.1.0"
edition = "2021"
description = "Ars plugin — thin IPC adapter to synergos-core daemon"

[dependencies]
# IPC protocol (synergos-net への直接依存は不要)
synergos-ipc = { path = "../synergos-ipc" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"

# Error handling
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
pretty_assertions = "1"
assert_matches = "1"
