[package]
name = "synergos-core"
version = "0.1.0"
edition = "2021"
description = "Synergos core daemon — resident application with EventBus and IPC server"

[[bin]]
name = "synergos-core"
path = "src/main.rs"

[dependencies]
# Internal crates
synergos-net = { path = "../synergos-net" }
synergos-ipc = { path = "../synergos-ipc" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# QUIC (for transfer stream handling)
quinn = "0.11"

# Crypto / Hash
blake3 = "1"

# Config / Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rmp-serde = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
crc32fast = "1"
thiserror = "2"
anyhow = "1"

# Unix peer credential check (SO_PEERCRED via libc::geteuid)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
pretty_assertions = "1"
assert_matches = "1"
serial_test = "3"
tracing-test = "0.2"
