[package]
name = "synergos-net"
version = "0.1.0"
edition = "2021"
description = "P2P network foundation with QUIC, Cloudflare Tunnel, DHT/Gossipsub mesh, and IPv6 Direct/TURN"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# QUIC
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }

# Serialization
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }

# Crypto / Hash
blake3 = "1"

# DNS
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls"] }

# Logging
tracing = "0.1"

# Utilities
uuid = { version = "1", features = ["v4"] }
bytes = "1"
dashmap = "6"
crc32fast = "1"
thiserror = "2"
rcgen = "0.13"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
pretty_assertions = "1"
assert_matches = "1"
