[package]
name = "synergos-tauri"
version = "0.1.0"
edition = "2021"
description = "Synergos GUI (Tauri 2 + React + Vite + Foundation UI)"

[lib]
name = "synergos_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "synergos-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
synergos-ipc = { path = "../../synergos-ipc" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
